# cpp_plazza

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  a.out  compile.sh
doc/: project-uml.xmi  project-uml.zargo  uml-plaza.zargo
doc/uml-plaza/: uml-plaza.argo  uml-plaza.xmi  uml-plaza_ClassDiagram.pgml
doc/uml-plaza (1)/: uml-plaza_UsecaseDiagram.pgml
gui/: CMakeLists.txt  Frame.cpp  Graphic.cpp  Utils.cpp
include/: CLIParser.hpp  Data.hpp  Exceptions.hpp  Frame.hpp  Graphic.hpp  Load.hpp  Master.hpp  MyButton.hpp  Search.hpp  Serialization.cpp  Serialization.hpp  Shell.hpp  Slave.hpp  Utils.hpp  plazza.hpp
include/container/: SplitMap.hpp
srcs/: CMakeLists.txt  Makefile  Search.cpp  Serialization.cpp  Slave.cpp  args_check.cpp  constants.hpp  enums.hpp  globals.cpp  main.cpp  maintest.cpp  test  tools.cpp  trim.cpp
srcs/CLIParser/: CLIParser.cpp  CLIParser.hpp
srcs/Master/: Master.cpp
srcs/Shell/: Shell.cpp  Shell.hpp
srcs/Slave/: Slave.cpp
srcs/command/: Command.cpp  Command.hpp
srcs/gui/: CMakeLists.txt  Frame.cpp  Graphic.cpp  MyButton.cpp  Utils.cpp
srcs/master/: Master.cpp  Master.hpp
srcs/network/: LinkDescriptor.cpp  LinkDescriptor.hpp  Slave.cpp  Slave.hpp  SocketStream.cpp  SocketStream.hpp  createSlave.cpp
srcs/parser/: Parser.cpp  Parser.hpp
srcs/serializable/: Command.cpp  Command.hpp  Data.cpp  Data.hpp  ISerializable.hpp  Serializable.hpp
srcs/shell/: Shell.cpp  Shell.hpp
srcs/slave/: Slave.cpp  Slave.hpp
tests/: CMakeLists.txt  NOTE  hiden_data  test_args.cpp  test_search.cpp
tests/container/: test_SplitMap.cpp
